# fast-api-backend-challenge

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  up_dev.sh
.circleci/: config.yml
backend/: .env  .env.example  Dockerfile  env.test  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d333f9b4f3f_descripcion.py  4b2c7cee40bd_descripcion.py  f9c3f511fa0d_descripcion.py
backend/app/core/: base.py  clients.py  config.py  cors.py  databse.py
backend/app/modules/pokemon/: router.py  schemas.py  service.py
backend/app/modules/user/: models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/users/: test_user_model.py  test_user_repository.py  test_user_router.py  test_user_service.py
